--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -586,6 +586,49 @@ js-comint lets me run a repl inside emacs where I can evaluate JavaScript.
   :ensure t)
 
 #+END_SRC
+** Docker
+*** Dockerfile mode
+#+BEGIN_SRC emacs-lisp :tangle yes
+
+  (use-package dockerfile-mode
+    :ensure t)
+
+#+END_SRC
+
+#+RESULTS:
+*** Docker mode
+[[https://github.com/Silex/docker.el][Docker mode]] lets me run various docker commands.
+
+#+BEGIN_SRC emacs-lisp 
+
+  (use-package docker
+    :ensure t
+    :config
+    (docker-global-mode))
+
+#+END_SRC
+
+#+RESULTS:
+: t
+
+*** Environment variables
+~docker-machine env default~ produces these environment variables, which must be set to use Docker.
+
+#+BEGIN_SRC emacs-lisp
+  (setenv "DOCKER_TLS_VERIFY" "1")
+  (setenv "DOCKER_HOST" "tcp://192.168.99.100:2376")
+  (setenv "DOCKER_CERT_PATH" "/Users/mark/.docker/machine/machines/default")
+  (setenv "DOCKER_MACHINE_NAME" "default")
+#+END_SRC
+
+#+RESULTS:
+: default
+** Shell
+Fish is my default shell in the terminal, but it doesn't work well in emacs, since many emacs integrations assume a sh-like shell. Let's use zsh instead.
+
+#+BEGIN_SRC emacs-lisp
+  (setq shell-file-name "/bin/zsh")
+#+END_SRC
 
 * Org
 I use Org Mode to take notes for work and personal.
