--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -812,6 +812,17 @@ I often link to JIRA issues in my tasks. This function lets me add link JIRA iss
 #+RESULTS:
 : org-jira-insert-link
 
+** Capture
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-capture-templates
+        '(("t" "todo" entry (file+headline "~/org/refile.org" "Tasks")
+           "* TODO [#A] %?\nSCHEDULED: %(org-insert-time-stamp (org-read-date nil t \"+0d\"))\n%a\n")))
+#+END_SRC
+
+#+RESULTS:
+| t | todo | entry | (file+headline ~/org/refile.org Tasks) | * TODO [#A] %? |
+
 ** Installation
 #+BEGIN_SRC emacs-lisp 
 
@@ -827,10 +838,10 @@ I often link to JIRA issues in my tasks. This function lets me add link JIRA iss
   (add-hook 'org-mode-hook #'my/org-mode)
   (add-hook 'org-agenda-mode-hook #'my/org-agenda-mode))
 
-(use-package evil-org
-  :ensure t)
-
 #+END_SRC
+
+#+RESULTS:
+: t
 
 * IRC
 ** Circe
