--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -163,12 +163,17 @@ This sets up emacs to inherit commands from ~$PATH~. Without it, some commands t
 
 #+BEGIN_SRC emacs-lisp 
 
-(defun set-exec-path-from-shell-PATH ()
-  (let ((path-from-shell (shell-command-to-string "env TERM=vt100 /bin/zsh -i -c 'echo $PATH'")))
-    (setenv "PATH" path-from-shell)
-    (setq exec-path (split-string path-from-shell path-separator))))
+  (use-package exec-path-from-shell
+    :ensure t
+    :config
+    (exec-path-from-shell-initialize))
 
-(when window-system (set-exec-path-from-shell-PATH))
+  ;; (defun set-exec-path-from-shell-PATH ()
+  ;;   (let ((path-from-shell (shell-command-to-string "env TERM=vt100 /bin/zsh -i -c 'echo $PATH'")))
+  ;;     (setenv "PATH" path-from-shell)
+  ;;     (setq exec-path (split-string path-from-shell path-separator))))
+
+  ;; (when window-system (set-exec-path-from-shell-PATH))
 
 #+END_SRC
 
